--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@freakycoder/react-native-helpers": "^1.0.2",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
+    "@reduxjs/toolkit": "^1.8.1",
+    "moment": "^2.29.3",
     "react": "17.0.2",
     "react-native": "^0.68.2",
     "react-native-loading-spinner-overlay": "^3.0.0",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.13.1",
-    "react-redux": "^8.0.1"
+    "react-redux": "^8.0.1",
+    "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
